--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+!DOCTYPE html>
 <html>
-	<head>
-		<title>第一个网页</title>
-	</head>
-	<body>
-	你能看到我吗
-	</body>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+    <title>chiyoshi</title>
+</head>
+<body>
+chiyoshi
+</body>
 </html>
