--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <title>chiyoshi</title>
+		<title>chiyoshi的博客</title>
 </head>
 <body>
-chiyoshi
+<h1>chiyoshi</h1>
 </body>
 </html>
