--- a/tools.html
+++ b/tools.html
@@ -2,7 +2,7 @@
 <html lang="ch">
 <head>
     <meta charset="UTF-8">
-    <title>Chiyoshi的小站-首页</title>
+    <title>Chiyoshi-LCD制作小工具</title>
     <link rel="icon" href="/icon/chiyoshi-icon-96x96.ico" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,19 +17,13 @@
         <img class="chiyoshi-logo" src="/img/chiyoshi-logo.svg" alt="chiyoshi-logo">
     </a>
     <div class="nav-bar-button">
-        <a class="nav-bar-item-this" href="" >首页</a>
-        <a class="nav-bar-item" href="tools.html">小工具</a>
+        <a class="nav-bar-item" href="./index.html" >首页</a>
+        <a class="nav-bar-item-this" href="">小工具</a>
         <a class="nav-bar-item" href="">作品</a>
     </div>
 </div>
-<div class="content">
-    <div class="content-area1">
-        <div class="content-title-left">
-            <img src="/img/arrow.svg" alt="">
-            <p class="title-text">Top</p>
-        </div>
-    </div>
-</div>
+
+<p class="content">fhfwe</p>
 
 </body>
 </html>
